# SDRPlusPlus-jp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  changelog-full.md  changelog.md  check_clang_format.sh  clang_format.sh  contributing.md  install_android_devenv.sh  make_debian_package.sh  make_macos_bundle.sh  make_windows_arm64ec_package.ps1  make_windows_package.ps1  readme.md  run_clang_format.sh  sdrpp.desktop  sdrpp_module.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_all.yml  build_android.yml  build_appimage.yml  build_linux.yml  build_macos.yml  build_ubuntu_deb.yml
android/: build.gradle
android/app/: build.gradle
cmake/: copy_msvc_redist.cmake  copy_runtime_dlls.cmake  find_or_fetch_curl.cmake  sdrpp_collect_required_deps.cmake  sdrpp_dep_list_helpers.cmake  sdrpp_find_dep.cmake  sdrpp_trace_command.cmake  sdrpp_trace_helpers.cmake
cmake/codex_android_zlib_probe/: CMakeLists.txt
core/: CMakeLists.txt
core/backends/android/: android_backend.h  backend.cpp
core/backends/glfw/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: backend.h  backend_common.cpp  backend_common.h  command_args.cpp  command_args.h  core.cpp  core.h  module.h  module_com.cpp  module_com.h  radio_interface.h  server.cpp  server.h  server_protocol.h  version.h
core/src/dsp/: chain.h  stream.h  types.h
core/src/dsp/buffer/: prebuffer.h
core/src/dsp/demod/: am.h  cw.h  ssb.h
core/src/dsp/loop/: agc.h
core/src/dsp/noise_reduction/: ctcss_squelch.h  power_squelch.h  squelch.h
core/src/dsp/window/: blackman_harris7.h  hamming.h
core/src/gui/: icons.cpp  icons.h  main_window.cpp  main_window.h  smgui.cpp  smgui.h  style.cpp  style.h  theme_manager.cpp
core/src/gui/brown/: geomap.cpp  geomap.h  kiwisdr_directory.cpp  kiwisdr_directory.h  kiwisdr_map.cpp  kiwisdr_map.h  small_waterfall.cpp
core/src/gui/dialogs/: credits.cpp  credits.h  dialog_box.h  loading_screen.cpp
core/src/gui/menus/: android.cpp  android.h  bandplan.cpp  bandplan.h  display.cpp  module_manager.cpp  source.cpp  theme.cpp
core/src/gui/widgets/: bandplan.cpp  bandplan.h  file_select.cpp  folder_select.cpp  frequency_select.cpp  frequency_select.h  menu.cpp  popup_dialog.cpp  popup_dialog.h  simple_widgets.h  snr_meter.cpp  snr_meter.h  toggle_button_grid.h  waterfall.cpp  waterfall.h
core/src/imgui/: imgui_internal.h
core/src/signal_path/: iq_frontend.cpp  iq_frontend.h  signal_path.cpp  signal_path.h  sink.cpp  source.cpp  source.h  vfo_manager.cpp  vfo_manager.h
core/src/utils/: arrays.cpp  arrays.h  ascii.h  base64.h  curl_init.cpp  curl_init.h  executable_path.cpp  executable_path.h  flac_reader.cpp  flac_reader.h  flog.cpp  flog.h  freq_formatting.h  hrfreq.cpp  net.cpp  net.h  networking.h  opengl_include_code.h  url.cpp  url.h  wav.cpp  wav.h
core/src/utils/proto/: curl_http.cpp  curl_http.h  http.cpp  http.h  kiwisdr.cpp  kiwisdr.h  pbkdf2_sha256.h  websock.cpp  websock.h
core/std_replacement/: filesystem
decoder_modules/atv_decoder/: CMakeLists.txt
decoder_modules/dab_decoder/: CMakeLists.txt
decoder_modules/falcon9_decoder/: CMakeLists.txt
decoder_modules/kg_sstv_decoder/: CMakeLists.txt
decoder_modules/m17_decoder/: CMakeLists.txt
decoder_modules/meteor_demodulator/: CMakeLists.txt
decoder_modules/pager_decoder/: CMakeLists.txt
decoder_modules/radio/: CMakeLists.txt
decoder_modules/radiosonde_decoder/: CMakeLists.txt  README-first.md  README.md
decoder_modules/ryfi_decoder/: CMakeLists.txt
decoder_modules/sdrpp_radiosonde/: CMakeLists.txt
decoder_modules/vor_receiver/: CMakeLists.txt
decoder_modules/weather_sat_decoder/: CMakeLists.txt
doc/: Android UI improvements.md  AppImage.md  Brown fork features worth porting.md  Build-Windows.md  EiBi station schedules module plan.md  Forks.txt  Full Code Review - Claude Fable.md  Neural network CW decoders and denoisers - research report.md  Pipeline-codex.md  Pipeline.md  SDRPlusPlus Community Edition - merge review.md  build-pothossdr.md  build-system.md  install-mingw.md  qrp73 fork features worth porting.md  sdrpp_iq_io_format_plan.md
docker_builds/: Dockerfile  do_build.sh
docker_builds/appimage/: Dockerfile  make_appimage.sh
docker_builds/ubuntu_bionic/: do_build.sh
docker_builds/ubuntu_oracular/: do_build.sh
docker_builds/ubuntu_resolute/: Dockerfile
docs/: qrp73 fork features worth porting.md
macos/: bundle_utils.sh  sdrpp.entitlements  stage_macos_bundle.sh
misc_modules/demo_module/: CMakeLists.txt
misc_modules/discord_integration/: CMakeLists.txt
misc_modules/frequency_manager/: CMakeLists.txt
misc_modules/iq_exporter/: CMakeLists.txt
misc_modules/noise_reduction_logmmse/: CMakeLists.txt
misc_modules/noise_reduction_logmmse/src/: README.txt  af_nr.h  arrays.cpp  arrays.h  bgnoise.h  deep-research-report.md  if_nr.h  logmmse.h  main.cpp  omlsa_mcra.cpp  omlsa_mcra.h
misc_modules/noise_reduction_logmmse/src/omlsa_mcra/: Cordic.h  Datablock_Read.cpp  Datablock_Read.h  G_calculate.cpp  G_calculate.h  LSA_denoise.cpp  LSA_denoise.h  SearchChart.h  base4_fft.cpp  base4_fft.h  head.h  main.cpp
misc_modules/recorder/: CMakeLists.txt
misc_modules/rigctl_client/: CMakeLists.txt
misc_modules/rigctl_server/: CMakeLists.txt
misc_modules/scanner/: CMakeLists.txt
root/: adi-registration.properties
scripts/: enrich_bandplans.py  freqconv.py  get_version.sh
sink_modules/android_audio_sink/: CMakeLists.txt
sink_modules/android_audio_sink/src/: main.cpp
source_modules/qmx_source/: CMakeLists.txt  SYNCHRONIZATION.md
source_modules/qmx_source/libqmx/: CMakeLists.txt
source_modules/qmx_source/libqmx/include/qmx/: QmxCatDebug.h  QmxDevice.h
source_modules/qmx_source/libqmx/src/: AndroidBackend.cpp  CatPoller.cpp  CatPoller.h  LinuxBackend.cpp  MacOSBackend.cpp  MacOSPermissions.h  MacOSPermissions.mm  QmxCatStatus.cpp  QmxCatStatus.h  QmxDevice.cpp  QmxDevice_internal.h  SerialCat.cpp  SerialCat.h  WindowsBackend.cpp
source_modules/qmx_source/src/: FreqModeSync.cpp  FreqModeSync.h  main.cpp
win32/: utf8.manifest
(+129 files in other folders)
